backdrop fixes (stops moving around + non-blurred for movies)

--- a/src/app/styl/views/loading.styl
+++ b/src/app/styl/views/loading.styl
@@ -17,14 +17,15 @@
         width: 100%
         height: 100%
         background-repeat no-repeat
-        background-position center
+        background-position-x 50%
+        background-position-y 0px
         background-size cover
 
     .loading-background-overlay
         width 100%
         height 100%
         position absolute
-        opacity .7
+        opacity 0.65
         background-color #000
 
     .state
