--- a/src/app/styl/views/movie_detail.styl
+++ b/src/app/styl/views/movie_detail.styl
@@ -14,7 +14,7 @@
         width: 100vw
         height: 100vh
         position: absolute
-        opacity: 0.6
+        opacity: 0.65
         background-color: #000
 
     .backdrop
@@ -22,7 +22,8 @@
         height: 100vh
         position: absolute
         opacity: 0
-        background-position: 50%
+        background-position-x 50%
+        background-position-y -33px
         background-repeat: no-repeat
         background-size: cover
         &.fadein
